// Vitest Snapshot v1

exports[`should > complex 1`] = `
"<style lang=\\"scss\\" scoped>
.container {

  .title {

  }
  .btn {

  }
}
</style>"
`;

exports[`should > complex 2`] = `
"<style lang=\\"scss\\" scoped>
div.container {

  header.title {

    ul {

      li {

      }
    }
  }
  main {

    p {

      button.btn {

      }
    }
  }
}
</style>"
`;

exports[`should > component 1`] = `
"<style lang=\\"scss\\" scoped>
.foo {

  .title {

  }
}
.btn {

}
</style>"
`;

exports[`should > component 2`] = `
"<style lang=\\"scss\\" scoped>
div {

  .foo {

    p.title {

    }
  }
  button.btn {

  }
}
</style>"
`;

exports[`should > merge 1`] = `
"<style lang=\\"scss\\" scoped>
.container {

  .title {

    .btn {

    }
  }
}
</style>"
`;

exports[`should > merge 2`] = `
"<style lang=\\"scss\\" scoped>
div.container {

  div.title {

    button.btn {

    }
  }
}
</style>"
`;

exports[`should > static 1`] = `
"<style lang=\\"scss\\" scoped>
.container {

  .header {

  }
  .main {

  }
  .footer {

    .email {

    }
  }
}
</style>"
`;

exports[`should > static 2`] = `
"<style lang=\\"scss\\" scoped>
div.container {

  h1.header {

  }
  main.main {

    ul {

      li {

      }
    }
  }
  div.footer {

    a.email {

    }
  }
}
</style>"
`;
